[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
# --- Core Metadata ---
name = "handson_ml"
version = "0.1.0"
authors = [
  { name="Bob Wang", email="bobmh42@ucla.edu" },
]
description = "A personal project implementing traditional machine learning algorithms from scratch with NumPy."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# --- Dependencies ---
# These are the libraries required to run the notebooks and the implementation package.
dependencies = [
    "numpy>=2.3.2",
    "scikit-learn>=1.7.1",
    "matplotlib>=3.1.5",
    "jupyterlab>=4.4.7",
]

[project.urls]
"Homepage" = "https://github.com/bobmh43/handson_ml"
"Bug Tracker" = "https://github.com/bobmh43/handson_ml/issues"

[tool.setuptools.packages.find]
# This tells setuptools to automatically find your 'implementations' package.
# It assumes your package directory is at the root of the project.
where = ["."]
include = ["implementations*"]